Add initial calculator design and basic functions (UI ready, functionality WIP)

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
                 <button id="minus_button" class="btn">-</button> 
             </div>
             <div class="div-row">
-                <button id="1_button" class="btn">3</button>
-                <button id="2_button" class="btn">2</button>
-                <button id="3_button"  class="btn">1</button>
-                <button id="minus_button" class="btn">-</button> 
+                <button id="._button" class="btn">.</button>
+                <button id="0_button" class="btn">0</button>
+                <button id="=_button"  class="btn">=</button>
+                <button id="plus_button" class="btn">+</button> 
             </div>
         </div>
     </div>
