Fix decimal handling and implement clear button functionality

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="calc-container">
         <div class="calc-screen">
-            <p class="calc-log">8 x 5 =</p>
-            <p class="calc-result">40.00</p>
+            <p class="log">Show once operator is chosen</p>
+            <p class="display">0</p>
         </div>
         <div class="keyboard">
             <div class="div-row">
@@ -21,25 +21,25 @@
                 <button id="7_button" class="btn">7</button>
                 <button id="8_button" class="btn">8</button>
                 <button id="9_button"  class="btn">9</button>
-                <button id="division_button" class="btn">/</button> 
+                <button id="divide_button" class="btn">/</button> 
             </div>
             <div class="div-row">
                 <button id="4_button" class="btn">4</button>
                 <button id="5_button" class="btn">5</button>
                 <button id="6_button"  class="btn">6</button>
-                <button id="multiply_button" class="btn">*</button> 
+                <button id="star_button" class="btn">*</button> 
             </div>
             <div class="div-row">
-                <button id="1_button" class="btn">3</button>
+                <button id="1_button" class="btn">1</button>
                 <button id="2_button" class="btn">2</button>
-                <button id="3_button"  class="btn">1</button>
+                <button id="3_button"  class="btn">3</button>
                 <button id="minus_button" class="btn">-</button> 
             </div>
             <div class="div-row">
                 <button id="._button" class="btn">.</button>
                 <button id="0_button" class="btn">0</button>
-                <button id="=_button"  class="btn">=</button>
-                <button id="plus_button" class="btn">+</button> 
+                <button id="equal_button"  class="btn">=</button>
+                <button id="add_button" class="btn">+</button> 
             </div>
         </div>
     </div>
