Add keyboard event listeners for calculator, integrating with existing click functionality

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="calc-container">
         <div class="calc-screen">
-            <p class="log">Show once operator is chosen</p>
+            <p class="log"></p>
             <p class="display">0</p>
         </div>
         <div class="keyboard">
@@ -36,7 +36,7 @@
                 <button id="minus_button" class="btn">-</button> 
             </div>
             <div class="div-row">
-                <button id="._button" class="btn">.</button>
+                <button id="dot_button" class="btn">.</button>
                 <button id="0_button" class="btn">0</button>
                 <button id="equal_button"  class="btn">=</button>
                 <button id="add_button" class="btn">+</button> 
